# AD-PIV

./: .gitignore  CMakeLists.txt  README.md  project.geany  project.md
config/: example.cfg  monteCarlo.cfg  pixels-3.0.cfg  pixels.cfg  run-disp.sh  run.sh  runFD.sh  runMC.sh  set-0.cfg  set-1.cfg  set-2.cfg  set-3.cfg  set-4.cfg  set-5.cfg  set-6.cfg  shear-5.0.cfg  template-disp.cfg  templateFD.cfg  test.cfg  uniform-5.0.cfg  uniform.cfg  vortex-5.0.cfg
reference/: plan.lyx
results/post/: main.py
src/: autodiff.f90  cluster.f90  config.f90  displacement.f90  figures.f90  generator.f90  kinds.f90  main.f90  mpiUtil.f90  netCDF.f90  pair.f90  piv.f90  plplotlib.f90  post-disp-violin.py  post-disp.py  post-example.py  post-finiteDifference.py  post-shear.py  post.f90  post.py  post2.py  process.f90  settings.f90  test.f90  utilities.f90
